# echotrace-whispering-objects

./: .gitignore  Makefile  README.md  pi-nodes  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
content-packs/sample-pack/: pack.yaml
content-packs/sample-pack/transcripts/: mystery_en.html  mystery_es.html  mystery_fr.html  object1_en.html  object1_es.html  object1_fr.html  object2_en.html  object2_es.html  object2_fr.html  object3_en.html  object3_es.html  object3_fr.html  object4_en.html  object4_es.html  object4_fr.html
docs/: accessibility_guide.md  admin_playbook.md  architecture.mmd  content_pack_guide.md  evaluation_metrics.md  hardware_setup.md  interpretive_design.md
fabrication/: wiring_fritzing.fzz
fabrication/mounts/: led_holder.stl  sensor_bezel.stl  speaker_bracket.stl
fabrication/panels/: faceplate.dxf  label_card.dxf
hub/: __init__.py  accessibility_profiles.yaml  accessibility_store.py  config.yaml  config_loader.py  content_manager.py  dashboard_app.py  event_logging.py  hub_listener.py  logging_utils.py  mqtt_topics.py  narrative_state.py  run_hub.py
hub/templates/: accessibility.html  analytics.html  base.html  calibration.html  content.html  index.html  nodes.html
pi_nodes/: __init__.py  audio_player.py  haptics.py  led_feedback.py  logging_utils.py  mqtt_topics.py  node_config.yaml  node_service.py  proximity_sensor.py
system/: hub.service  node.service
tests/: conftest.py  test_analytics_summary.py  test_content_manager.py  test_dashboard_api.py  test_hub_smoke.py  test_narrative_state.py  test_node_smoke.py
(+2 files in other folders)
